# PLAV

./: .gitignore  LICENSE  README.md  aircraftconfig.py  atmosphere.py  avionics_package.py  brgrModel.py  brgr_aero_forces_linearized  brgr_aero_forces_linearized.py  dave_ml_interpretter.py  dynamics_sim.py  f16Control.py  f16ControlHIL.py  f16ControlHITL.py  f16_model.py  flat_earth_eom.py  flight_control.py  flightsim3.py  flightsim4.py  genericAircraftConfig.py  ivp_logger.py  j2_harmonic_gravity.py  joystick_reader.py  main_program  manual_trim.py  numerical_integration_methods.py  plav.py  pyproject.toml  quaternion_math.py  requirements.txt  runge_kutta4.py  simplied_dynamics.py  simstart.py  simulator.py  step_logging.py  test.py  tumblingbrick.json  ussa1976.py  wgs84.py  wind_tunnel.py  (+1 more)
aircraftConfigs/: brgrDroneDrop.json  case10ballisticSphere2.json  case11steadyF16.json  case12supersonicF16.json  case13AaltitudeF16.json  case13BvelocityF16.json  case13CcourseF16.json  case13DlateralF16.json  case15northPole.json  case16IDL.json  case1sphereDragless.json  case2tumblingBrickNoDrag.json  case3tumblingBrickDamping.json  case6sphereDrag.json  case7sphereSteadyWind.json  case8sphereUnsteadyWind.json  case9ballisticSphere1.json  openvspgfequivalent.json  openvspgfequivalentMod.json  openvspmodel.json  sphere.json  tumblingbrick.json
arduinoCode/: arduinoCode.ino
control_modules/: f16_control.py
scenarios/: basicBalloon.json  brgrBalloonDrop.json  brgrDroneDrop.json  brgrSurface.json  brgrSym.json  brgrUnsafe.json  case10ballisticSphere2.json  case16IDL.json  (+18 more)
(+35 files in other folders)
